--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://TonyFPY.github.io/</title><link rel="canonical" href="https://TonyFPY.github.io/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://TonyFPY.github.io/" /></head></html>
+<!DOCTYPE html><html><head><title>https://tonyfpy.github.io/</title><link rel="canonical" href="https://tonyfpy.github.io/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://tonyfpy.github.io/" /></head></html>
