--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,10 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About Myself"/>
-<meta name="twitter:description" content="Thanks for reading!"/>
+<meta name="twitter:description" content="Brief Introduction: Currently, I am an undergraduate student from University of Nottingham, majoring in Computer Science with Artificial Intelligence. In my academic life, I have developed interests in the areas of Computer Vison and Computer Graphics. With great passion, I have completed some online modules on Coursera in my spare time and have learned some additional computer-related skills. If you want to know more about me, I am willing to share my stories with you."/>
 
     <meta property="og:title" content="About Myself" />
-<meta property="og:description" content="Thanks for reading!" />
+<meta property="og:description" content="Brief Introduction: Currently, I am an undergraduate student from University of Nottingham, majoring in Computer Science with Artificial Intelligence. In my academic life, I have developed interests in the areas of Computer Vison and Computer Graphics. With great passion, I have completed some online modules on Coursera in my spare time and have learned some additional computer-related skills. If you want to know more about me, I am willing to share my stories with you." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://tonyfpy.github.io/about/" />
 
@@ -116,7 +116,62 @@
       <h1>About Myself</h1>
     </header>
 
-    <p>Thanks for reading!</p>
+    
+
+<h3 id="brief-introduction">Brief Introduction:</h3>
+
+<p>Currently, I am an undergraduate student from University of Nottingham, majoring in Computer Science with Artificial Intelligence. In my academic life, I have developed interests in the areas of Computer Vison and Computer Graphics. With great passion, I have completed some online modules on Coursera in my spare time and have learned some additional computer-related skills. If you want to know more about me, I am willing to share my stories with you.</p>
+
+<h3 id="education">Education:</h3>
+
+<ul>
+<li><em>09/2019 - till now</em> University of Nottingham</li>
+<li><em>09/2017 - 06/2019</em> University of Nottingham Ningbo China<br /></li>
+<li><em>07/2018 - 08/2018</em> UNNC International Math Summer School</li>
+<li><em>06/2018 - 07/2018</em> UBC Vancouver Summer Program</li>
+</ul>
+
+<h3 id="research">Research:</h3>
+
+<ul>
+<li><em>06/2019 - 08/2019</em> UNNC Undergraduate Summer Research Program</li>
+</ul>
+
+<h3 id="internship">Internship:</h3>
+
+<ul>
+<li><em>09/2017 - 06/2019</em> UNNC Library Technical Intern</li>
+<li><em>08/2018 - 09/2018</em> Juphoon System Software intern</li>
+</ul>
+
+<h3 id="awards">Awards:</h3>
+
+<ul>
+<li><em>2017-2018</em> Dean’s Scholarship of UNNC</li>
+<li><em>2017-2018</em> China Life Cycle Ambassador</li>
+</ul>
+
+<h3 id="extracurricular-experiences">Extracurricular Experiences:</h3>
+
+<ul>
+<li><em>09/2019</em> 2019 World Artificial Intelligence Conference volunteer</li>
+<li><em>05/2019</em> 2019 International Teaching and Learning Conference speaker</li>
+<li><em>06/2018</em> “One Belt One Road” International Forum for Young Innovators volunteer</li>
+<li><em>01/2018</em> “Passing Hope” Project of UNNC volunteer</li>
+</ul>
+
+<h3 id="what-i-like">What I like:</h3>
+
+<ul>
+<li>Los Angeles Lakers</li>
+<li>Marvel Studios</li>
+<li>《 Marvel&rsquo;s Agents of S.H.I.E.L.D. 》
+《 The Flash 》
+《 Brooklyn Nine-Nine 》</li>
+<li>SLEEP : )</li>
+</ul>
+
+<p>Thanks for reading!</p>
 
   </article>
 </section>
