--- a/about/index.html
+++ b/about/index.html
@@ -125,39 +125,39 @@
 <h3 id="education">Education:</h3>
 
 <ul>
-<li><em>09/2019 - till now</em> University of Nottingham</li>
-<li><em>09/2017 - 06/2019</em> University of Nottingham Ningbo China<br /></li>
-<li><em>07/2018 - 08/2018</em> UNNC International Math Summer School</li>
-<li><em>06/2018 - 07/2018</em> UBC Vancouver Summer Program</li>
+<li><em>09/2019 - till now</em> &nbsp; University of Nottingham</li>
+<li><em>09/2017 - 06/2019</em> &nbsp; University of Nottingham Ningbo China<br /></li>
+<li><em>07/2018 - 08/2018</em> &nbsp; UNNC International Math Summer School</li>
+<li><em>06/2018 - 07/2018</em> &nbsp; UBC Vancouver Summer Program</li>
 </ul>
 
 <h3 id="research">Research:</h3>
 
 <ul>
-<li><em>06/2019 - 08/2019</em> UNNC Undergraduate Summer Research Program</li>
+<li><em>06/2019 - 08/2019</em> &nbsp; UNNC Undergraduate Summer Research Program</li>
 </ul>
 
 <h3 id="internship">Internship:</h3>
 
 <ul>
-<li><em>09/2017 - 06/2019</em> UNNC Library Technical Intern</li>
-<li><em>08/2018 - 09/2018</em> Juphoon System Software intern</li>
+<li><em>09/2017 - 06/2019</em> &nbsp; UNNC Library Technical Intern</li>
+<li><em>08/2018 - 09/2018</em> &nbsp; Juphoon System Software intern</li>
 </ul>
 
 <h3 id="awards">Awards:</h3>
 
 <ul>
-<li><em>2017-2018</em> Dean’s Scholarship of UNNC</li>
-<li><em>2017-2018</em> China Life Cycle Ambassador</li>
+<li><em>2017-2018</em> &nbsp; Dean’s Scholarship of UNNC</li>
+<li><em>2017-2018</em> &nbsp; China Life Cycle Ambassador</li>
 </ul>
 
 <h3 id="extracurricular-experiences">Extracurricular Experiences:</h3>
 
 <ul>
-<li><em>09/2019</em> 2019 World Artificial Intelligence Conference volunteer</li>
-<li><em>05/2019</em> 2019 International Teaching and Learning Conference speaker</li>
-<li><em>06/2018</em> “One Belt One Road” International Forum for Young Innovators volunteer</li>
-<li><em>01/2018</em> “Passing Hope” Project of UNNC volunteer</li>
+<li><em>09/2019</em> &nbsp; 2019 World Artificial Intelligence Conference volunteer</li>
+<li><em>05/2019</em> &nbsp; 2019 International Teaching and Learning Conference speaker</li>
+<li><em>06/2018</em> &nbsp; “One Belt One Road” International Forum for Young Innovators volunteer</li>
+<li><em>01/2018</em> &nbsp; “Passing Hope” Project of UNNC volunteer</li>
 </ul>
 
 <h3 id="what-i-like">What I like:</h3>
@@ -171,7 +171,7 @@
 <li>SLEEP : )</li>
 </ul>
 
-<p>Thanks for reading!</p>
+<h3 id="thanks-for-reading">Thanks for reading!</h3>
 
   </article>
 </section>
